<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.plasticene.boot</groupId>
    <artifactId>plasticene-boot-starter-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>plasticene-common</module>
        <module>plasticene-boot-starter-mybatis</module>
        <module>plasticene-boot-starter-web</module>
        <module>plasticene-boot-starter-banner</module>
        <module>plasticene-boot-starter-redis</module>
        <module>plasticene-boot-starter-cache</module>
        <module>plasticene-boot-starter-license</module>
        <module>plasticene-boot-starter-oss</module>
        <module>plasticene-boot-starter-data-scope</module>
        <module>plasticene-boot-starter-excel</module>
        <module>plasticene-boot-example</module>
    </modules>

    <properties>

        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- spring boot 依赖版本 -->
        <spring.boot.version>3.4.5</spring.boot.version>
        <!-- Spring Cloud -->
        <spring.cloud.version>2023.0.3</spring.cloud.version>
        <!-- Spring Cloud Alibaba -->
        <spring.cloud.alibaba.version>2023.0.3.2</spring.cloud.alibaba.version>
        <!-- java -->
        <java.version>17</java.version>

        <!-- mybatis-plus 依赖版本 -->
        <mybatis-plus.version>3.5.2</mybatis-plus.version>
        <!-- druid 依赖版本 -->
        <druid.version>1.2.8</druid.version>

        <!-- knife4j 依赖版本 -->
        <knife4j.version>4.5.0</knife4j.version>

        <transmittable-thread-local.version>2.12.2</transmittable-thread-local.version>

        <redisson.version>3.17.4</redisson.version>

        <caffeine.version>2.8.5</caffeine.version>

        <!-- License -->
        <truelicense.version>1.33</truelicense.version>
        <!-- fastjson-->
        <fastjson.version>1.2.83</fastjson.version>
        <!-- apache commons -->
        <commons.lang.version>3.12.0</commons.lang.version>
        <!-- hutool工具包 -->
        <hutool.version>5.8.24</hutool.version>
        <!-- 编码解码器 如base64 -->
        <codec.version>1.13</codec.version>




    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <!-- 统一依赖版本管理 -->
    <dependencyManagement>
        <dependencies>
            <!-- spring boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- spring cloud -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- spring cloud alibaba -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring.cloud.alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <!-- knife4j api文档 -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>

            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>transmittable-thread-local</artifactId> <!-- 解决 ThreadLocal 父子线程的传值问题 -->
                <version>${transmittable-thread-local.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-redis</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson</artifactId>
                <version>${redisson.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>

            <!-- License -->
            <dependency>
                <groupId>de.schlichtherle.truelicense</groupId>
                <artifactId>truelicense-core</artifactId>
                <version>${truelicense.version}</version>
            </dependency>

            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>

            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${codec.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons.lang.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>




        </dependencies>
    </dependencyManagement>





</project>